--- a/main.html
+++ b/main.html
@@ -8,6 +8,37 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post" >
+		<label for="name">Name</label>
+		<input id="name" type="text" name="name" placeholder="Name" required>
+		
+		<label for="email">Email</label>
+		<input id="email" type="email" name="Email" placeholder="Email" required>
+
+		<input id="gender_m" type="radio" name="gender" required>
+		<label for="gender_m">Male</label
+
+		<input id="gender_f" type="radio" name="gender" required>
+		<label for="gender_f">Female</label>
+
+		<select id="cars" placeholder="--Please choose an option--" required>
+			<option>BMW</option>
+			<option>AUDI</option>
+			<option>TATA</option>
+		</select>
+		<label for="age">Age</label>
+		<input id="age" type="number" name="age" placeholder="Age" required>
+		<label for="dob">DOB</label>
+		<input id="dob" type="date" name="date" required>
+		<label for="tel">Phone Number</label>
+		<input id="tel" type="tel" name="phone_number" placeholder="xxx-xxx-xxxx">
+		<label for="password">Password</label>
+		<input id="password" type="password" name="password" placeholder="Password" required>
+		<input id="tos" type="checkbox" required>
+		<label for="tos">I agree to the TOS</label>
+		<button type="submit">Submit</button>
+	</form>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
