--- a/main.html
+++ b/main.html
@@ -15,12 +15,13 @@
 		<label for="email">Email</label>
 		<input id="email" type="email" name="Email" placeholder="Email" required>
 
+		<label for="gender_m">Male</label>
 		<input id="gender_m" type="radio" name="gender" required>
-		<label for="gender_m">Male</label
 
-		<input id="gender_f" type="radio" name="gender" required>
 		<label for="gender_f">Female</label>
+		<input id="gender_f" type="radio" name="gender" required>
 
+		<label for="cars">Car Brands</label>
 		<select id="cars" placeholder="--Please choose an option--" required>
 			<option>BMW</option>
 			<option>AUDI</option>
